Fixed a problem with the paths

--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://yazanmashal03.github.io/my-website"
+  "homepage": "https://yazanmashal.com/"
 }
